# Ofeo-2.0

orfeo-us-fe-feature-login/: README.md  app.py  neotec_css.css
orfeo-us-fe-feature-login/server/: __init__.py  routes.py
orfeo-us-fe-feature-login/src/karont3-fe/: index.html  package-lock.json  package.json
orfeo-us-fe-feature-login/src/karont3-fe/src/: common.js  defaultSettings.json  main.jsx
orfeo-us-fe-feature-login/src/karont3-fe/src/auth/: UserAuth.jsx
orfeo-us-fe-feature-login/src/karont3-fe/src/static/css/: Dropdown.css  ewala_css.css  little.css  login_cognito.css  medium.css  newdropdown.css  nuevo.css  very_little.css
orfeo-us-fe-feature-login/src/karont3-fe/src/views/: BaseNavigation.jsx  Config.jsx  Dashboard.jsx  Dashboard_add.jsx  Dashboard_view.jsx  Devices.jsx  Index.jsx  LineChart.jsx  LoginTenant.jsx  LoginUser.jsx  Overview.jsx  SideBar.jsx  SunburstGraph.jsx  Timeline.jsx  TopBar.jsx
orfeo-us-fe-feature-login/src/karont3-fe/src/views/Atoms/: BubblePlot.jsx  Button.jsx  Card.jsx  Card_Container.jsx  CheckSwitch.jsx  Checkbox.jsx  ColorPicker.jsx  DatePicker.jsx  DonnutChart.jsx  DropdownButton.jsx  DropdownContainer.jsx  Form.jsx  GraphSet.jsx  KPIChart.jsx  KpiSet.jsx  Login.jsx  Logo.jsx  MapComponent.jsx  MapSet.jsx  Modal.jsx  NetworkGraph.jsx  NewDropDown.jsx  PieChart.jsx  (+6 more)
orfeo-us-flask-api-base/: .gitignore  README.md  pyproject.toml
orfeo-us-flask-api-base/db/: new_db.sql
orfeo-us-flask-api-base/src/: defaultSettings.json
orfeo-us-flask-api-base/src/us_flask_api/: __init__.py  api.py  app.py  cognito.py  config.py  db.py
