[tool.poetry]
name = "karont3-us-flask-api"
version = "0.1.0"
description = "KARONT3 Threat Intelligence"
authors = ["Jonathan Gonzalez <jgonf@safebytelabs.com>"]
license = "Propietary Software"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
apifairy = "^1.3.0"
logging = "^0.4.9.6"
psycopg = "^3.1.12"
boto3 = "^1.28.72"
pyjwt = "^2.8.0"
flask-login = "^0.6.3"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
